src/ast/LessParser.js
// Generated from LessParser.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var LessParserListener = require('./LessParserListener').LessParserListener;
var grammarFileName = "LessParser.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'null'", "'in'", null, "'...'", null, "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "'>'", "'~'", "'<'", 
                     "':'", "';'", "','", "'.'", "'$'", "'@'", "'&'", "'#'", 
                     "'::'", "'+'", "'*'", "'/'", "'-'", "'%'", "'=='", 
                     "'>='", "'<='", "'!='", "'='", "'|='", "'~='", "'url'", 
                     null, "'@import'", "'@media'", "'only'", "':extend'", 
                     "'!important'", "'@arguments'", "'@rest'", "'reference'", 
                     "'inline'", "'less'", "'css'", "'once'", "'multiple'", 
                     "'when'", "'not'", "'and'", null, null, null, null, 
                     null, null, null, null, "'color'", "'convert'", "'data-uri'", 
                     "'default'", "'unit'", "'get-unit'", "'svg-gradient'", 
                     "'escape'", "'e'", "'replace'", "'length'", "'extract'", 
                     "'ceil'", "'floor'", "'percentage'", "'round'", "'sqrt'", 
                     "'abs'", "'sin'", "'asin'", "'cos'", "'acos'", "'tan'", 
                     "'atan'", "'pi'", "'pow'", "'mod'", "'min'", "'max'", 
                     "'isnumber'", "'isstring'", "'iscolor'", "'iskeyword'", 
                     "'isurl'", "'ispixel'", "'isem'", "'ispercentage'", 
                     "'isunit'", "'rgb'", "'rgba'", "'argb'", "'hsl'", "'hsla'", 
                     "'hsv'", "'hsva'", "'hue'", "'saturation'", "'lightness'", 
                     "'hsvhue'", "'hsvsaturation'", "'hsvvalue'", "'red'", 
                     "'green'", "'blue'", "'alpha'", "'luma'", "'luminance'", 
                     "'saturate'", "'desaturate'", "'lighten'", "'darken'", 
                     "'fadein'", "'fadeout'", "'fade'", "'spin'", "'mix'", 
                     "'greyscale'", "'contrast'", "'multiply'", "'screen'", 
                     "'overlay'", "'softlight'", "'hardlight'", "'difference'", 
                     "'exclusion'", "'average'", "'negation'" ];

var symbolicNames = [ null, "NULL", "IN", "Unit", "Ellipsis", "InterpolationStart", 
                      "LPAREN", "RPAREN", "BlockStart", "BlockEnd", "LBRACK", 
                      "RBRACK", "GT", "TIL", "LT", "COLON", "SEMI", "COMMA", 
                      "DOT", "DOLLAR", "AT", "PARENTREF", "HASH", "COLONCOLON", 
                      "PLUS", "TIMES", "DIV", "MINUS", "PERC", "EQEQ", "GTEQ", 
                      "LTEQ", "NOTEQ", "EQ", "PIPE_EQ", "TILD_EQ", "URL", 
                      "UrlStart", "IMPORT", "MEDIA", "MEDIAONLY", "EXTEND", 
                      "IMPORTANT", "ARGUMENTS", "REST", "REFERENCE", "INLINE", 
                      "LESS", "CSS", "ONCE", "MULTIPLE", "WHEN", "NOT", 
                      "AND", "Identifier", "StringLiteral", "Number", "Color", 
                      "WS", "SL_COMMENT", "COMMENT", "FUNCTION_NAME", "COLOR", 
                      "CONVERT", "DATA_URI", "DEFAULT", "UNIT", "GET_UNIT", 
                      "SVG_GRADIENT", "ESCAPE", "E", "REPLACE", "LENGTH", 
                      "EXTRACT", "CEIL", "FLOOR", "PERCENTAGE", "ROUND", 
                      "SQRT", "ABS", "SIN", "ASIN", "COS", "ACOS", "TAN", 
                      "ATAN", "PI", "POW", "MOD", "MIN", "MAX", "ISNUMBER", 
                      "ISSTRING", "ISCOLOR", "ISKEYWORD", "ISURL", "ISPIXEL", 
                      "ISEM", "ISPERCENTAGE", "ISUNIT", "RGB", "RGBA", "ARGB", 
                      "HSL", "HSLA", "HSV", "HSVA", "HUE", "SATURATION", 
                      "LIGHTNESS", "HSVHUE", "HSVSATURATION", "HSVVALUE", 
                      "RED", "GREEN", "BLUE", "ALPHA", "LUMA", "LUMINANCE", 
                      "SATURATE", "DESATURATE", "LIGHTEN", "DARKEN", "FADEIN", 
                      "FADEOUT", "FADE", "SPIN", "MIX", "GREYSCALE", "CONTRAST", 
                      "MULTIPLY", "SCREEN", "OVERLAY", "SOFTLIGHT", "HARDLIGHT", 
                      "DIFFERENCE", "EXCLUSION", "AVERAGE", "NEGATION", 
                      "UrlEnd", "Url", "SPACE", "InterpolationStartAfter", 
                      "IdentifierAfter" ];

var ruleNames =  [ "stylesheet", "statement", "media", "mediaQueryList", 
                   "mediaQuery", "mediaType", "mediaExpression", "mediaFeature", 
                   "variableName", "commandStatement", "mathCharacter", 
                   "mathStatement", "expression", "func", "conditions", 
                   "condition", "conditionStatement", "variableDeclaration", 
                   "importDeclaration", "importOption", "referenceUrl", 
                   "mediaTypes", "ruleset", "block", "blockItem", "mixinDefinition", 
                   "mixinGuard", "mixinDefinitionParam", "mixinReference", 
                   "selectors", "selector", "attrib", "negation", "pseudo", 
                   "element", "selectorPrefix", "attribRelate", "identifier", 
                   "identifierPart", "identifierVariableName", "property", 
                   "values", "url", "measurement" ];

function LessParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

LessParser.prototype = Object.create(antlr4.Parser.prototype);
LessParser.prototype.constructor = LessParser;

Object.defineProperty(LessParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

LessParser.EOF = antlr4.Token.EOF;
LessParser.NULL = 1;
LessParser.IN = 2;
LessParser.Unit = 3;
LessParser.Ellipsis = 4;
LessParser.InterpolationStart = 5;
LessParser.LPAREN = 6;
LessParser.RPAREN = 7;
LessParser.BlockStart = 8;
LessParser.BlockEnd = 9;
LessParser.LBRACK = 10;
LessParser.RBRACK = 11;
LessParser.GT = 12;
LessParser.TIL = 13;
LessParser.LT = 14;
LessParser.COLON = 15;
LessParser.SEMI = 16;
LessParser.COMMA = 17;
LessParser.DOT = 18;
LessParser.DOLLAR = 19;
LessParser.AT = 20;
LessParser.PARENTREF = 21;
LessParser.HASH = 22;
LessParser.COLONCOLON = 23;
LessParser.PLUS = 24;
LessParser.TIMES = 25;
LessParser.DIV = 26;
LessParser.MINUS = 27;
LessParser.PERC = 28;
LessParser.EQEQ = 29;
LessParser.GTEQ = 30;
LessParser.LTEQ = 31;
LessParser.NOTEQ = 32;
LessParser.EQ = 33;
LessParser.PIPE_EQ = 34;
LessParser.TILD_EQ = 35;
LessParser.URL = 36;
LessParser.UrlStart = 37;
LessParser.IMPORT = 38;
LessParser.MEDIA = 39;
LessParser.MEDIAONLY = 40;
LessParser.EXTEND = 41;
LessParser.IMPORTANT = 42;
LessParser.ARGUMENTS = 43;
LessParser.REST = 44;
LessParser.REFERENCE = 45;
LessParser.INLINE = 46;
LessParser.LESS = 47;
LessParser.CSS = 48;
LessParser.ONCE = 49;
LessParser.MULTIPLE = 50;
LessParser.WHEN = 51;
LessParser.NOT = 52;
LessParser.AND = 53;
LessParser.Identifier = 54;
LessParser.StringLiteral = 55;
LessParser.Number = 56;
LessParser.Color = 57;
LessParser.WS = 58;
LessParser.SL_COMMENT = 59;
LessParser.COMMENT = 60;
LessParser.FUNCTION_NAME = 61;
LessParser.COLOR = 62;
LessParser.CONVERT = 63;
LessParser.DATA_URI = 64;
LessParser.DEFAULT = 65;
LessParser.UNIT = 66;
LessParser.GET_UNIT = 67;
LessParser.SVG_GRADIENT = 68;
LessParser.ESCAPE = 69;
LessParser.E = 70;
LessParser.REPLACE = 71;
LessParser.LENGTH = 72;
LessParser.EXTRACT = 73;
LessParser.CEIL = 74;
LessParser.FLOOR = 75;
LessParser.PERCENTAGE = 76;
LessParser.ROUND = 77;
LessParser.SQRT = 78;
LessParser.ABS = 79;
LessParser.SIN = 80;
LessParser.ASIN = 81;
LessParser.COS = 82;
LessParser.ACOS = 83;
LessParser.TAN = 84;
LessParser.ATAN = 85;
LessParser.PI = 86;
LessParser.POW = 87;
LessParser.MOD = 88;
LessParser.MIN = 89;
LessParser.MAX = 90;
LessParser.ISNUMBER = 91;
LessParser.ISSTRING = 92;
LessParser.ISCOLOR = 93;
LessParser.ISKEYWORD = 94;
LessParser.ISURL = 95;
LessParser.ISPIXEL = 96;
LessParser.ISEM = 97;
LessParser.ISPERCENTAGE = 98;
LessParser.ISUNIT = 99;
LessParser.RGB = 100;
LessParser.RGBA = 101;
LessParser.ARGB = 102;
LessParser.HSL = 103;
LessParser.HSLA = 104;
LessParser.HSV = 105;
LessParser.HSVA = 106;
LessParser.HUE = 107;
LessParser.SATURATION = 108;
LessParser.LIGHTNESS = 109;
LessParser.HSVHUE = 110;
LessParser.HSVSATURATION = 111;
LessParser.HSVVALUE = 112;
LessParser.RED = 113;
LessParser.GREEN = 114;
LessParser.BLUE = 115;
LessParser.ALPHA = 116;
LessParser.LUMA = 117;
LessParser.LUMINANCE = 118;
LessParser.SATURATE = 119;
LessParser.DESATURATE = 120;
LessParser.LIGHTEN = 121;
LessParser.DARKEN = 122;
LessParser.FADEIN = 123;
LessParser.FADEOUT = 124;
LessParser.FADE = 125;
LessParser.SPIN = 126;
LessParser.MIX = 127;
LessParser.GREYSCALE = 128;
LessParser.CONTRAST = 129;
LessParser.MULTIPLY = 130;
LessParser.SCREEN = 131;
LessParser.OVERLAY = 132;
LessParser.SOFTLIGHT = 133;
LessParser.HARDLIGHT = 134;
LessParser.DIFFERENCE = 135;
LessParser.EXCLUSION = 136;
LessParser.AVERAGE = 137;
LessParser.NEGATION = 138;
LessParser.UrlEnd = 139;
LessParser.Url = 140;
LessParser.SPACE = 141;
LessParser.InterpolationStartAfter = 142;
LessParser.IdentifierAfter = 143;

LessParser.RULE_stylesheet = 0;
LessParser.RULE_statement = 1;
LessParser.RULE_media = 2;
LessParser.RULE_mediaQueryList = 3;
LessParser.RULE_mediaQuery = 4;
LessParser.RULE_mediaType = 5;
LessParser.RULE_mediaExpression = 6;
LessParser.RULE_mediaFeature = 7;
LessParser.RULE_variableName = 8;
LessParser.RULE_commandStatement = 9;
LessParser.RULE_mathCharacter = 10;
LessParser.RULE_mathStatement = 11;
LessParser.RULE_expression = 12;
LessParser.RULE_func = 13;
LessParser.RULE_conditions = 14;
LessParser.RULE_condition = 15;
LessParser.RULE_conditionStatement = 16;
LessParser.RULE_variableDeclaration = 17;
LessParser.RULE_importDeclaration = 18;
LessParser.RULE_importOption = 19;
LessParser.RULE_referenceUrl = 20;
LessParser.RULE_mediaTypes = 21;
LessParser.RULE_ruleset = 22;
LessParser.RULE_block = 23;
LessParser.RULE_blockItem = 24;
LessParser.RULE_mixinDefinition = 25;
LessParser.RULE_mixinGuard = 26;
LessParser.RULE_mixinDefinitionParam = 27;
LessParser.RULE_mixinReference = 28;
LessParser.RULE_selectors = 29;
LessParser.RULE_selector = 30;
LessParser.RULE_attrib = 31;
LessParser.RULE_negation = 32;
LessParser.RULE_pseudo = 33;
LessParser.RULE_element = 34;
LessParser.RULE_selectorPrefix = 35;
LessParser.RULE_attribRelate = 36;
LessParser.RULE_identifier = 37;
LessParser.RULE_identifierPart = 38;
LessParser.RULE_identifierVariableName = 39;
LessParser.RULE_property = 40;
LessParser.RULE_values = 41;
LessParser.RULE_url = 42;
LessParser.RULE_measurement = 43;


function StylesheetContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LessParser.RULE_stylesheet;
    return this;
}

StylesheetContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StylesheetContext.prototype.constructor = StylesheetContext;

StylesheetContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

StylesheetContext.prototype.enterRule = function(listener) {
    if(listener instanceof LessParserListener ) {
        listener.enterStylesheet(this);
	}
};

StylesheetContext.prototype.exitRule = function(listener) {
    if(listener instanceof LessParserListener ) {
        listener.exitStylesheet(this);
	}
};




LessParser.StylesheetContext = StylesheetContext;

LessParser.prototype.stylesheet = function() {

    var localctx = new StylesheetContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, LessParser.RULE_stylesheet);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 91;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << LessParser.InterpolationStart) | (1 << LessParser.GT) | (1 << LessParser.TIL) | (1 << LessParser.COLON) | (1 << LessParser.AT) | (1 << LessParser.PARENTREF) | (1 << LessParser.HASH) | (1 << LessParser.COLONCOLON) | (1 << LessParser.PLUS) | (1 << LessParser.TIMES))) !== 0) || ((((_la - 38)) & ~0x1f) == 0 && ((1 << (_la - 38)) & ((1 << (LessParser.IMPORT - 38)) | (1 << (LessParser.MEDIA - 38)) | (1 << (LessParser.Identifier - 38)))) !== 0)) {
            this.state = 88;
            this.statement();
            this.state = 93;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LessParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.importDeclaration = function() {
    return this.getTypedRuleContext(ImportDeclarationContext,0);
};

StatementContext.prototype.ruleset = function() {
    return this.getTypedRuleContext(RulesetContext,0);
};

StatementContext.prototype.variableDeclaration = function() {
    return this.getTypedRuleContext(VariableDeclarationContext,0);
};

StatementContext.prototype.SEMI = function() {
    return this.getToken(LessParser.SEMI, 0);
};

StatementContext.prototype.mixinDefinition = function() {
    return this.getTypedRuleContext(MixinDefinitionContext,0);
};

StatementContext.prototype.media = function() {
    return this.getTypedRuleContext(MediaContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof LessParserListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof LessParserListener ) {
        listener.exitStatement(this);
	}
};




LessParser.StatementContext = StatementContext;

LessParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, LessParser.RULE_statement);
    try {
        this.state = 101;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 94;
            this.importDeclaration();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 95;
            this.ruleset();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 96;
            this.variableDeclaration();
            this.state = 97;
            this.match(LessParser.SEMI);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 99;
            this.mixinDefinition();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 100;
            this.media();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function MediaContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LessParser.RULE_media;
    return this;
}

MediaContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MediaContext.prototype.constructor = MediaContext;

MediaContext.prototype.MEDIA = function() {
    return this.getToken(LessParser.MEDIA, 0);
};

MediaContext.prototype.mediaQueryList = function() {
    return this.getTypedRuleContext(MediaQueryListContext,0);
};

MediaContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

MediaContext.prototype.enterRule = function(listener) {
    if(listener instanceof LessParserListener ) {
        listener.enterMedia(this);
	}
};

MediaContext.prototype.exitRule = function(listener) {
    if(listener instanceof LessParserListener ) {
        listener.exitMedia(this);
	}
};




LessParser.MediaContext = MediaContext;

LessParser.prototype.media = function() {

    var localctx = new MediaContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, LessParser.RULE_media);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 103;
        this.match(LessParser.MEDIA);
        this.state = 104;
        this.mediaQueryList();
        this.state = 105;
        this.block();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function MediaQueryListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LessParser.RULE_mediaQueryList;
    return this;
}

MediaQueryListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MediaQueryListContext.prototype.constructor = MediaQueryListContext;

MediaQueryListContext.prototype.mediaQuery = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(MediaQueryContext);
    } else {
        return this.getTypedRuleContext(MediaQueryContext,i);
    }
};

MediaQueryListContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(LessParser.COMMA);
    } else {
        return this.getToken(LessParser.COMMA, i);
    }
};


MediaQueryListContext.prototype.enterRule = function(listener) {
    if(listener instanceof LessParserListener ) {
        listener.enterMediaQueryList(this);
	}
};

MediaQueryListContext.prototype.exitRule = function(listener) {
    if(listener instanceof LessParserListener ) {
        listener.exitMediaQueryList(this);
	}
};




LessParser.MediaQueryListContext = MediaQueryListContext;

LessParser.prototype.mediaQueryList = function() {

    var localctx = new MediaQueryListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, LessParser.RULE_mediaQueryList);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 115;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===LessParser.InterpolationStart || _la===LessParser.LPAREN || ((((_la - 40)) & ~0x1f) == 0 && ((1 << (_la - 40)) & ((1 << (LessParser.MEDIAONLY - 40)) | (1 << (LessParser.NOT - 40)) | (1 << (LessParser.Identifier - 40)))) !== 0)) {
            this.state = 107;
            this.mediaQuery();
            this.state = 112;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===LessParser.COMMA) {
                this.state = 108;
                this.match(LessParser.COMMA);
                this.state = 109;
                this.mediaQuery();
                this.state = 114;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function MediaQueryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LessParser.RULE_mediaQuery;
    return this;
}

MediaQueryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MediaQueryContext.prototype.constructor = MediaQueryContext;

MediaQueryContext.prototype.mediaType = function() {
    return this.getTypedRuleContext(MediaTypeContext,0);
};

MediaQueryContext.prototype.AND = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(LessParser.AND);
    } else {
        return this.getToken(LessParser.AND, i);
    }
};


MediaQueryContext.prototype.mediaExpression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(MediaExpressionContext);
    } else {
        return this.getTypedRuleContext(MediaExpressionContext,i);
    }
};

MediaQueryContext.prototype.MEDIAONLY = function() {
    return this.getToken(LessParser.MEDIAONLY, 0);
};

MediaQueryContext.prototype.NOT = function() {
    return this.getToken(LessParser.NOT, 0);
};

MediaQueryContext.prototype.enterRule = function(listener) {
    if(listener instanceof LessParserListener ) {
        listener.enterMediaQuery(this);
	}
};

MediaQueryContext.prototype.exitRule = function(listener) {
    if(listener instanceof LessParserListener ) {
        listener.exitMediaQuery(this);
	}
};




LessParser.MediaQueryContext = MediaQueryContext;

LessParser.prototype.mediaQuery = function() {

    var localctx = new MediaQueryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, LessParser.RULE_mediaQuery);
    var _la = 0; // Token type
    try {
        this.state = 136;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case LessParser.InterpolationStart:
        case LessParser.MEDIAONLY:
        case LessParser.NOT:
        case LessParser.Identifier:
            this.enterOuterAlt(localctx, 1);
            this.state = 118;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===LessParser.MEDIAONLY || _la===LessParser.NOT) {
                this.state = 117;
                _la = this._input.LA(1);
                if(!(_la===LessParser.MEDIAONLY || _la===LessParser.NOT)) {
                this._errHandler.recoverInline(this);
                }
                else {
                	this._errHandler.reportMatch(this);
                    this.consume();
                }
            }

            this.state = 120;
            this.mediaType();
            this.state = 125;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===LessParser.AND) {
                this.state = 121;
                this.match(LessParser.AND);
                this.state = 122;
                this.mediaExpression();
                this.state = 127;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            break;
        case LessParser.LPAREN:
            this.enterOuterAlt(localctx, 2);
            this.state = 128;
            this.mediaExpression();
            this.state = 133;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===LessParser.AND) {
                this.state = 129;
                this.match(LessParser.AND);
                this.state = 130;
                this.mediaExpression();
                this.state = 135;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function MediaTypeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LessParser.RULE_mediaType;
    return this;
}

MediaTypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MediaTypeContext.prototype.constructor = MediaTypeContext;

MediaTypeContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

MediaTypeContext.prototype.enterRule = function(listener) {
    if(listener instanceof LessParserListener ) {
        listener.enterMediaType(this);
	}
};

MediaTypeContext.prototype.exitRule = function(listener) {
    if(listener instanceof LessParserListener ) {
        listener.exitMediaType(this);
	}
};




LessParser.MediaTypeContext = MediaTypeContext;

LessParser.prototype.mediaType = function() {

    var localctx = new MediaTypeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, LessParser.RULE_mediaType);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 138;
        this.identifier();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function MediaExpressionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LessParser.RULE_mediaExpression;
    return this;
}

MediaExpressionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MediaExpressionContext.prototype.constructor = MediaExpressionContext;

MediaExpressionContext.prototype.LPAREN = function() {
    return this.getToken(LessParser.LPAREN, 0);
};

MediaExpressionContext.prototype.mediaFeature = function() {
    return this.getTypedRuleContext(MediaFeatureContext,0);
};

MediaExpressionContext.prototype.RPAREN = function() {
    return this.getToken(LessParser.RPAREN, 0);
};

MediaExpressionContext.prototype.COLON = function() {
    return this.getToken(LessParser.COLON, 0);
};

MediaExpressionContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

MediaExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof LessParserListener ) {
        listener.enterMediaExpression(this);
	}
};

MediaExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof LessParserListener ) {
        listener.exitMediaExpression(this);
	}
};




LessParser.MediaExpressionContext = MediaExpressionContext;

LessParser.prototype.mediaExpression = function() {

    var localctx = new MediaExpressionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, LessParser.RULE_mediaExpression);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 140;
        this.match(LessParser.LPAREN);
        this.state = 141;
        this.mediaFeature();
        this.state = 144;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===LessParser.COLON) {
            this.state = 142;
            this.match(LessParser.COLON);
            this.state = 143;
            this.expression();
        }

        this.state = 146;
        this.match(LessParser.RPAREN);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

